program1C-TestDoc: adds test doc describing tests and expected outputs to be ran. Updates designDoc with simplified pseudoCode

--- a/Team9logEntryLater/Team9logEntryLater.csproj
+++ b/Team9logEntryLater/Team9logEntryLater.csproj
@@ -49,6 +49,7 @@
   <ItemGroup>
     <None Include="App.config" />
     <None Include="docs\designDoc.md" />
+    <None Include="docs\testDoc.md" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
