Final  working code

--- a/Group 9 Phase 1 Program B/Group 9 Phase 1 Program B.csproj
+++ b/Group 9 Phase 1 Program B/Group 9 Phase 1 Program B.csproj
@@ -9,7 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Update="LastnameFirstnameLog.csv">
+    <None Update="DuressaAlewiyaLog.csv">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
