--- a/Team9logEntryLater/Team9logEntryLater.csproj
+++ b/Team9logEntryLater/Team9logEntryLater.csproj
@@ -43,6 +43,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="LogEntry.cs" />
+    <Compile Include="Note.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -50,6 +52,7 @@
     <None Include="App.config" />
     <None Include="docs\designDoc.md" />
     <None Include="docs\testDoc.md" />
+    <None Include="IrvinSamLog.csv" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
