--- a/Group 9 Phase 1 Program B/Group 9 Phase 1 Program B.csproj
+++ b/Group 9 Phase 1 Program B/Group 9 Phase 1 Program B.csproj
@@ -8,9 +8,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
-  <ItemGroup>
+  <!--<ItemGroup>
     <None Update="DuressaAlewiyaLog.csv">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-  </ItemGroup>
+  </ItemGroup>-->
 </Project>
